# aoc2024_vis

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/loader/: mod.rs
src/scenes/: components.rs  days.rs  mod.rs  resources.rs  states.rs
src/scenes/day01/: input.rs  mod.rs  part1.rs  part2.rs  resources.rs  states.rs
src/scenes/day02/: input.rs  mod.rs  resources.rs  states.rs  ui.rs
src/scenes/day03/: input.rs  mod.rs  part1.rs  part2.rs  resources.rs  states.rs
src/scenes/day04/: input.rs  mod.rs  part1.rs  part2.rs
src/scenes/day05/: input.rs  mod.rs  part1.rs  part2.rs
src/scenes/day06/: input.rs  mod.rs  ui.rs
src/scenes/day07/: input.rs  mod.rs  ui.rs
src/scenes/day08/: input.rs  mod.rs  part1.rs  part2.rs
src/scenes/day09/: controls.rs  input.rs  mod.rs  part1.rs  part2.rs
src/scenes/day10/: components.rs  input.rs  mod.rs  part1.rs  part2.rs  resources.rs
src/scenes/day11/: controls.rs  input.rs  mod.rs  ui.rs
src/scenes/day12/: input.rs  mod.rs  part1.rs  part2.rs
src/scenes/day13/: claw_machine.rs  input.rs  mod.rs  part1.rs  part2.rs
src/scenes/day14/: input.rs  mod.rs  ui.rs
src/scenes/day15/: controls.rs  input.rs  mod.rs  part1.rs  part2.rs  sokoban.rs
src/scenes/day16/: input.rs  mod.rs  part1.rs  part2.rs
src/scenes/day17/: input.rs  mod.rs  part1.rs  part2.rs
src/scenes/day18/: input.rs  mod.rs  part1.rs  part2.rs
src/scenes/day19/: input.rs  mod.rs  ui.rs
src/scroll_controls/: mod.rs  ui.rs
src/tools/: convolution.rs  coord.rs  direction.rs  maze.rs  merge_insert.rs  mod.rs  vec2d.rs
(+29 files in other folders)
