[package]
name = "aoc2024_vis"
version = "0.1.0"
edition = "2021"

[features]
with_inspector = ["bevy/bevy_remote"]

[dependencies]
bevy = { version = "0.15", features = ["wayland"] }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
